<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".FragmentosAdministrador.AgregarRegistro">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/custom_fondo">

        <ImageView
            android:src="@drawable/detectado"
            android:layout_width="120dp"
            android:layout_height="120dp"/>

        <TextView
            android:id="@+id/fechaRegistro"
            android:text="@string/fechaRegistro"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:textColor="#000"
            android:textAlignment="center"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/horaRegistro"
            android:text="@string/horaRegistro"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:textColor="#000"
            android:textAlignment="center"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/posicion"
            android:text="@string/posicion"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:textColor="#000"
            android:textAlignment="center"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/distancia"
            android:text="@string/distancia"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:textColor="#000"
            android:textAlignment="center"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/crearRegistro"
            android:text="@string/crearRegistro"
            android:layout_marginTop="15dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textColor="#333"
            android:background="@drawable/custom_buttom_rgba"/>

        <TextView
            android:text="@string/deteccionAuto"
            android:layout_marginTop="20dp"
            android:layout_width="200dp"
            android:textSize="14dp"
            android:textColor="#777"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>